JAVA-383: Mitigated Jansi native access warning for Windows executable.